Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11514

IN with a mixture of TIME and DATETIME returns a wrong result

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL)
    • 10.3.0
    • Temporal Types

    Description

      This query correctly returns TRUE:

      SELECT TIME'10:20:30' IN (102030,TIME'10:20:31');
      

      +-------------------------------------------+
      | TIME'10:20:30' IN (102030,TIME'10:20:31') |
      +-------------------------------------------+
      |                                         1 |
      +-------------------------------------------+
      

      If I add more values into the IN list, it returns FALSE with a warning:

      SELECT TIME'10:20:30' IN (102030,TIME'10:20:31',TIMESTAMP'2001-01-01 10:20:32');
      SHOW WARNINGS;
      

      +--------------------------------------------------------------------------+
      | TIME'10:20:30' IN (102030,TIME'10:20:31',TIMESTAMP'2001-01-01 10:20:32') |
      +--------------------------------------------------------------------------+
      |                                                                        0 |
      +--------------------------------------------------------------------------+
      +---------+------+------------------------------------+
      | Level   | Code | Message                            |
      +---------+------+------------------------------------+
      | Warning | 1292 | Incorrect datetime value: '102030' |
      +---------+------+------------------------------------+
      

      CASE demonstrates the same problem. See MDEV-11555.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.75d
                  1.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.